--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,11 @@
   "root": true,
   "env": {
     "browser": true,
+    "es6": true,
     "node": true,
     "jquery": true
   },
-  "extends": ["plugin:prettier/recommended"],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
