--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "node": "^18.15.0"
   },
   "config": {
-    "breakpoints": "[768, 1024]"
+    "breakpoints": [
+      768,
+      1024
+    ]
   },
   "main": "",
   "license": "MIT",
@@ -39,7 +42,6 @@
     "postcss-loader": "^7.3.2",
     "postcss-nesting": "^11.2.2",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
     "resolve-url-loader": "^5.0.0",
     "responsive-loader": "^3.1.2",
     "sass": "^1.62.1",
@@ -55,8 +57,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "pace-js": "^1.2.4",
-    "swiper": "^9.3.2",
-    "ws": "^8.13.0"
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
+    "swiper": "^9.3.2"
   },
   "scripts": {
     "dev": "npx webpack serve --config webpack.dev.js --node-env development",
