--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
     "jquery": true
   },
   "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "global": {
+    "app": true
+  },
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
